--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "next": "12.2.4",
     "react": "18.2.0",
     "react-beautiful-dnd": "^13.1.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-select": "^5.4.0"
   },
   "devDependencies": {
     "@types/lodash": "^4.14.182",
