--- a/package.json
+++ b/package.json
@@ -9,19 +9,25 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-icons": "^1.1.1",
+    "@react-spring/types": "^9.5.2",
+    "@react-spring/web": "^9.5.2",
     "@types/react-beautiful-dnd": "^13.1.2",
     "lodash": "^4.17.21",
     "next": "12.2.4",
     "react": "18.2.0",
     "react-beautiful-dnd": "^13.1.0",
     "react-dom": "18.2.0",
-    "react-select": "^5.4.0"
+    "react-select": "^5.4.0",
+    "react-use-measure": "^2.1.1",
+    "styled-components": "^5.3.5"
   },
   "devDependencies": {
     "@types/lodash": "^4.14.182",
     "@types/node": "18.6.4",
     "@types/react": "18.0.17",
     "@types/react-dom": "18.0.6",
+    "@types/styled-components": "^5.1.26",
     "autoprefixer": "^10.4.8",
     "eslint": "8.21.0",
     "eslint-config-next": "12.2.4",
