--- a/package.json
+++ b/package.json
@@ -9,18 +9,31 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hookform/resolvers": "^2.9.7",
+    "@prisma/client": "^4.2.1",
     "@radix-ui/react-icons": "^1.1.1",
     "@react-spring/types": "^9.5.2",
     "@react-spring/web": "^9.5.2",
+    "@trpc/client": "^9.27.1",
+    "@trpc/next": "^9.27.1",
+    "@trpc/react": "^9.27.1",
+    "@trpc/server": "^9.27.1",
     "@types/react-beautiful-dnd": "^13.1.2",
+    "argon2": "^0.28.7",
     "lodash": "^4.17.21",
     "next": "12.2.4",
+    "next-auth": "^4.10.3",
     "react": "18.2.0",
     "react-beautiful-dnd": "^13.1.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.34.2",
+    "react-query": "^3.39.2",
     "react-select": "^5.4.0",
     "react-use-measure": "^2.1.1",
-    "styled-components": "^5.3.5"
+    "styled-components": "^5.3.5",
+    "superjson": "^1.9.1",
+    "tailwind-merge": "^1.6.0",
+    "zod": "^3.18.0"
   },
   "devDependencies": {
     "@types/lodash": "^4.14.182",
@@ -32,6 +45,7 @@
     "eslint": "8.21.0",
     "eslint-config-next": "12.2.4",
     "postcss": "^8.4.16",
+    "prisma": "^4.2.1",
     "tailwindcss": "^3.1.8",
     "typescript": "4.7.4"
   }
