--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "@trpc/next": "^9.27.1",
     "@trpc/react": "^9.27.1",
     "@trpc/server": "^9.27.1",
+    "@types/cors": "^2.8.12",
     "@types/react-beautiful-dnd": "^13.1.2",
     "argon2": "^0.28.7",
+    "cors": "^2.8.5",
     "lodash": "^4.17.21",
     "next": "12.2.4",
     "next-auth": "^4.10.3",
