--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^2.9.7",
-    "@prisma/client": "^4.2.1",
+    "@prisma/client": "^4.3.1",
+    "@radix-ui/react-context-menu": "^1.0.0",
     "@radix-ui/react-icons": "^1.1.1",
     "@react-spring/types": "^9.5.2",
     "@react-spring/web": "^9.5.2",
@@ -29,12 +30,14 @@
     "react-beautiful-dnd": "^13.1.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.34.2",
+    "react-hot-toast": "^2.4.0",
     "react-query": "^3.39.2",
     "react-select": "^5.4.0",
     "react-use-measure": "^2.1.1",
     "styled-components": "^5.3.5",
     "superjson": "^1.9.1",
     "tailwind-merge": "^1.6.0",
+    "tailwindcss-radix": "^2.6.0",
     "zod": "^3.18.0"
   },
   "devDependencies": {
