--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@prisma/client": "^4.3.1",
     "@radix-ui/react-context-menu": "^1.0.0",
     "@radix-ui/react-icons": "^1.1.1",
+    "@radix-ui/react-select": "^1.0.0",
     "@react-spring/types": "^9.5.2",
     "@react-spring/web": "^9.5.2",
     "@trpc/client": "^9.27.1",
@@ -32,7 +33,6 @@
     "react-hook-form": "^7.34.2",
     "react-hot-toast": "^2.4.0",
     "react-query": "^3.39.2",
-    "react-select": "^5.4.0",
     "react-use-measure": "^2.1.1",
     "styled-components": "^5.3.5",
     "superjson": "^1.9.1",
