--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@formkit/auto-animate": "^1.0.0-beta.3",
     "@hookform/resolvers": "^2.9.7",
+    "@next-auth/prisma-adapter": "^1.0.4",
     "@prisma/client": "^4.3.1",
     "@radix-ui/react-context-menu": "^1.0.0",
     "@radix-ui/react-icons": "^1.1.1",
