--- a/package.json
+++ b/package.json
@@ -9,13 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@formkit/auto-animate": "^1.0.0-beta.3",
     "@hookform/resolvers": "^2.9.7",
     "@next-auth/prisma-adapter": "^1.0.4",
     "@prisma/client": "^4.3.1",
     "@radix-ui/react-context-menu": "^1.0.0",
     "@radix-ui/react-icons": "^1.1.1",
     "@radix-ui/react-select": "^1.0.0",
+    "@radix-ui/react-tooltip": "^1.0.0",
     "@react-spring/types": "^9.5.2",
     "@react-spring/web": "^9.5.2",
     "@trpc/client": "^9.27.1",
@@ -27,7 +27,7 @@
     "argon2": "^0.28.7",
     "cors": "^2.8.5",
     "lodash": "^4.17.21",
-    "next": "12.2.4",
+    "next": "12.3",
     "next-auth": "^4.10.3",
     "react": "18.2.0",
     "react-beautiful-dnd": "^13.1.0",
